<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Álinson Santos Xavier <isoron@gmail.com>
  ~
  ~ This file is part of Loop Habit Tracker.
  ~
  ~ Loop Habit Tracker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by the
  ~ Free Software Foundation, either version 3 of the License, or (at your
  ~ option) any later version.
  ~
  ~ Loop Habit Tracker is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  ~ more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:habit="http://isoron.org/android"
              android:id="@+id/llOuter"
              style="@style/ListHabits.Item">

    <LinearLayout
        android:id="@+id/llInner"
        style="@style/ListHabits.HabitCard">

        <org.isoron.uhabits.views.RingView
            android:layout_height="15dp"
            android:layout_width="15dp"
            android:id="@+id/scoreRing"
            habit:thickness="3"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:id="@+id/label"
            style="@style/ListHabits.Label" />

        <LinearLayout
            android:id="@+id/llButtons"
            style="@style/ListHabits.CheckmarkPanel" />
    </LinearLayout>

</LinearLayout>